# biodigitaljazz

./: .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  Makefile  README.md  asm.rst  bazel-bin  bazel-biodigitaljazz  bazel-out  bazel-testlogs  blogroll.rst  bookmarks.rst  bootstrap.sh  build.fish  build.sh  conf.py  contact.rst  favicons.rst  index.rst  openbsd.txt  pcrowdoodle.rst  requirements.txt  rss.xml  systemantics.rst  transistor.rst  xrp.rst
.github/workflows/: deploy.yml  website.yml
_extensions/: hi.py  microdata.py
_static/: base.css  biodigitaljazz.css  dark.css  favicon_16x16.json  site.webmanifest
_templates/: globaltoc.html  layout.html
blog/: STTTGTS.rst  ancestors.rst  archetypes.rst  asm.rst  diff2html.rst  favicon.rst  goodreads.rst  history.rst  index.rst  littlebraincell.rst  pcrowdoodle.rst  picam.rst  smell-o-vision.rst  systemantics.rst  systems.rst  www.rst
blog/diff2html/: changeme.sh  copyme2.txt  modifyme.txt  removeme.txt  renameme.txt
projects/: ideas.rst
src/: main.rs  tests.rs
xrp/: index.rst  notes.rst  sdk.rst
